--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 data/*.csv
 # Large files in results directory
 results/scaled/logregression.RData
+results/scaled/train_test_FullDF.RData
 
 # User-specific files
 .Ruserdata
