trained knn (suspiciously large model - 2gb)

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 data/*.csv
 # Large files in results directory
 results/scaled/logregression*
+results/scaled/knn*
 results/scaled/train_test*
 
 # User-specific files
